# framework.security.smack-privilege-config

./: CMakeLists.txt  app_group_list  smack_default_rules  smack_default_rules_mobile  smack_default_rules_wearable
packaging/: smack-privilege-config.changes  smack-privilege-config.spec
permissions/: ADDITIONAL_RULES.smack  EFL_org.tizen.privilege.bluetooth.health.smack  EFL_org.tizen.privilege.location.smack  EFL_org.tizen.privilege.messaging.write.smack  EFL_org.tizen.privilege.nfc.admin.smack  EFL_org.tizen.privilege.nfc.common.smack  EFL_org.tizen.privilege.nfc.tag.smack  EFL_org.tizen.privilege.wifi.wifidirect.admin.smack  OSP.smack  OSP_org.tizen.privilege.antivirus.smack  OSP_org.tizen.privilege.callforward.smack  OSP_org.tizen.privilege.cellbroadcast.smack  OSP_org.tizen.privilege.contact.read.smack  OSP_org.tizen.privilege.contact.write.smack  OSP_org.tizen.privilege.datacontrol.consumer.smack  OSP_org.tizen.privilege.messaging.email.smack  OSP_org.tizen.privilege.messaging.mms.smack  OSP_org.tizen.privilege.messaging.read.smack  OSP_org.tizen.privilege.messaging.send.smack  OSP_org.tizen.privilege.messaging.sms.smack  OSP_org.tizen.privilege.messaging.write.smack  OSP_org.tizen.privilege.nfc.admin.smack  OSP_org.tizen.privilege.nfc.p2p.smack  OSP_org.tizen.privilege.smstrigger.smack  OSP_org.tizen.privilege.userprofile.read.smack  OSP_org.tizen.privilege.wappush.smack  OSP_partner.smack  PATH_RULES_GROUP_RW.smack  PATH_RULES_PUBLIC_RO.smack  WRT.smack  WRT_org.tizen.privilege.application.info.smack  WRT_org.tizen.privilege.contact.write.smack  WRT_org.tizen.privilege.messaging.email.smack  WRT_org.tizen.privilege.messaging.read.smack  WRT_org.tizen.privilege.messaging.send.smack  WRT_org.tizen.privilege.messaging.write.smack  WRT_org.tizen.privilege.nfc.admin.smack  WRT_org.tizen.privilege.nfc.tag.smack  WRT_partner.smack
permissions_mobile/: ADDITIONAL_RULES.smack  EFL_org.tizen.privilege.bluetoothmanager.smack  EFL_org.tizen.privilege.nfc.p2p.smack  OSP.smack  OSP_org.tizen.privilege.location.smack  OSP_org.tizen.privilege.messaging.email.smack  OSP_org.tizen.privilege.messaging.read.smack  OSP_org.tizen.privilege.messaging.send.smack  OSP_org.tizen.privilege.nfc.tag.smack  OSP_org.tizen.privilege.nfcmanager.smack  OSP_org.tizen.privilege.notification.smack  OSP_org.tizen.privilege.notificationmanager.smack  OSP_org.tizen.privilege.userprofile.write.smack  WRT.smack  WRT_org.tizen.privilege.messaging.mms.smack  WRT_org.tizen.privilege.messaging.read.smack  WRT_org.tizen.privilege.messaging.send.smack  WRT_org.tizen.privilege.messaging.sms.smack  WRT_org.tizen.privilege.nfc.admin.smack  WRT_org.tizen.privilege.nfc.common.smack
permissions_mobile/permissions_2_2_1/: WRT.smack  WRT_org.tizen.privilege.bluetooth.health.smack  WRT_partner.smack  WRT_platform.smack
permissions_mobile/permissions_2_3_0/: EFL.smack  EFL_org.tizen.privilege.alarm.set.smack  EFL_org.tizen.privilege.antivirus.smack  EFL_org.tizen.privilege.bookmark.admin.smack  EFL_org.tizen.privilege.calendar.write.smack  EFL_org.tizen.privilege.camera.smack  EFL_org.tizen.privilege.contact.read.smack  EFL_org.tizen.privilege.contact.write.smack  EFL_org.tizen.privilege.display.smack  EFL_org.tizen.privilege.email.admin.smack  EFL_org.tizen.privilege.haptic.smack  EFL_org.tizen.privilege.led.smack  EFL_org.tizen.privilege.location.enable.smack  EFL_org.tizen.privilege.location.smack  EFL_org.tizen.privilege.mediastorage.smack  EFL_org.tizen.privilege.message.read.smack  EFL_org.tizen.privilege.network.get.smack  EFL_org.tizen.privilege.network.set.smack  EFL_org.tizen.privilege.nfc.admin.smack  EFL_org.tizen.privilege.nfc.cardemulation.smack  EFL_org.tizen.privilege.packagemanager.admin.smack  EFL_org.tizen.privilege.push.smack  EFL_org.tizen.privilege.systemsettings.smack  EFL_org.tizen.privilege.tethering.admin.smack  EFL_partner.smack  EFL_platform.smack  WRT.smack  WRT_org.tizen.privilege.bluetooth.admin.smack  WRT_org.tizen.privilege.bluetooth.gap.smack  WRT_org.tizen.privilege.bluetooth.spp.smack  WRT_org.tizen.privilege.internet.smack  WRT_org.tizen.privilege.location.smack  WRT_org.tizen.privilege.messaging.write.smack  WRT_partner.smack  WRT_platform.smack
permissions_mobile/permissions_2_3_1/: EFL.smack  EFL_org.tizen.privilege.account.write.smack  EFL_org.tizen.privilege.bookmark.admin.smack  EFL_org.tizen.privilege.callhistory.write.smack  EFL_org.tizen.privilege.camera.smack  EFL_org.tizen.privilege.contact.read.smack  EFL_org.tizen.privilege.contact.write.smack  EFL_org.tizen.privilege.content.write.smack  EFL_org.tizen.privilege.download.smack  EFL_org.tizen.privilege.email.smack  EFL_org.tizen.privilege.keymanager.admin.smack  EFL_org.tizen.privilege.keymanager.smack  EFL_org.tizen.privilege.message.read.smack  EFL_org.tizen.privilege.network.set.smack  EFL_org.tizen.privilege.nfc.admin.smack  EFL_org.tizen.privilege.nfc.smack  EFL_org.tizen.privilege.packagemanager.info.smack  EFL_org.tizen.privilege.reboot.smack  EFL_org.tizen.privilege.recorder.smack  EFL_org.tizen.privilege.screenshot.smack  EFL_org.tizen.privilege.systemsettings.admin.smack  EFL_org.tizen.privilege.telephony.admin.smack  EFL_org.tizen.privilege.telephony.smack  (+12 more)
permissions_wearable/: EFL.smack  EFL_org.tizen.privilege.account.read.smack  EFL_org.tizen.privilege.alarm.smack  EFL_org.tizen.privilege.application.launch.smack  EFL_org.tizen.privilege.audiorecorder.smack  EFL_org.tizen.privilege.bluetooth.admin.smack  EFL_org.tizen.privilege.bluetoothmanager.smack  EFL_org.tizen.privilege.camera.smack  EFL_org.tizen.privilege.contact.read.smack  EFL_org.tizen.privilege.contact.write.smack  EFL_org.tizen.privilege.content.read.smack  EFL_org.tizen.privilege.content.write.smack  EFL_org.tizen.privilege.notification.smack  EFL_org.tizen.privilege.packagemanager.install.smack  EFL_org.tizen.privilege.power.smack  EFL_org.tizen.privilege.setting.smack  EFL_org.tizen.privilege.shortcut.smack  EFL_org.tizen.privilege.systeminfo.smack  EFL_org.tizen.privilege.videorecorder.smack  WRT.smack  WRT_org.tizen.privilege.camera.smack
(+209 files in other folders)
