CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(smack-privilege-config C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(SHAREDIR "${PREFIX}/share/privilege-control")
SET(VERSION 1.0)

SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.2")

FILE(GLOB smackfiles ${CMAKE_CURRENT_SOURCE_DIR}/permissions/*.smack)
FILE(GLOB dacfiles ${CMAKE_CURRENT_SOURCE_DIR}/permissions/*.dac)

INSTALL(FILES ${smackfiles} DESTINATION ${SHAREDIR})
INSTALL(FILES ${dacfiles} DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dev_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/smack_default_rules DESTINATION /opt/etc/smack/accesses.d/)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/smack_default_rules2 DESTINATION /opt/etc/smack/)
