CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(smack-privilege-config C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(SHAREDIR "${PREFIX}/share/privilege-control")
SET(TIZ_VERSION_2_2_1 "2.2.1")
SET(TIZ_VERSION_2_3_0 "2.3")
SET(TIZ_VERSION_2_3_1 "2.3.1")
SET(TIZ_VERSION_2_4_0 "2.4")
SET(CURRENT_TIZ_VERSION ${TIZ_VERSION_2_4_0})
SET(SHAREDIR_TIZ_VERSION_2_2_1 "${SHAREDIR}/${TIZ_VERSION_2_2_1}")
SET(SHAREDIR_TIZ_VERSION_2_3_0 "${SHAREDIR}/${TIZ_VERSION_2_3_0}")
SET(SHAREDIR_TIZ_VERSION_2_3_1 "${SHAREDIR}/${TIZ_VERSION_2_3_1}")
SET(SHAREDIR_TIZ_VERSION_2_4_0 "${SHAREDIR}/${TIZ_VERSION_2_4_0}")
SET(SHAREDIR_CURRENT_TIZ_VERSION "${SHAREDIR}/${CURRENT_TIZ_VERSION}")

SET(VERSION 1.0)

SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.2")

IF("${PROFILE_TYPE}" STREQUAL "MOBILE")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_2_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_2_2_1/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_2_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_2_3_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_2_3_1/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_2_4_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions_mobile/permissions_common/ADDITIONAL_RULES.smack DESTINATION ${SHAREDIR})

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dev_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_2_1})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})

ELSEIF("${PROFILE_TYPE}" STREQUAL "WEARABLE")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_old/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_2_3_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_2_3_1/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_2_4_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions_wearable/permissions_common/ADDITIONAL_RULES.smack DESTINATION ${SHAREDIR})

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dev_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_1})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})

ELSEIF("${PROFILE_TYPE}" STREQUAL "TV")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_tv/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_tv/permissions_common/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_tv/permissions_2_3_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/permissions_tv/permissions_2_4_0/ DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions_tv/permissions_common/ADDITIONAL_RULES.smack DESTINATION ${SHAREDIR})

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/app_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dev_group_list DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_3_0})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/permissions.filter DESTINATION ${SHAREDIR_TIZ_VERSION_2_4_0})

ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/smack_default_rules DESTINATION /etc/smack/accesses.d/ RENAME default)
